# secret-management-system

./: .env.copy  .env.example  .gitignore  Dockerfile  README.md  app.py  crypto_utils.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  app.py  crypto_utils.py  drive_auth.py  drive_sync.py
app/static/css/: dashboard.css
app/static/js/: index.js
app/templates/: dashboard.html  index.html
app/templates/partials/forms/: credit_card.html  identity.html  ssh_key.html  wifi.html
auto/: start
static/css/: index.css
static/js/: dashboard.js
templates/: base.html  dashboard.html  index.html
templates/partials/: head.html
templates/partials/forms/: api_credential.html  bank_account.html  database.html  login.html  note.html  server.html  software_license.html
